# fastdemux

./: CMakeLists.txt  LICENSE  README.md  common.c  common.h  fastaseq.c  fastdemux.c  history.howto.txt  main.c  test.sh
Rtest/: CheckFastDemux.R  description.html  description.qmd
